Transformed to multi-module maven project: main module and installer module for the installer script, which will be implemented in Java and exported as jar and then packaged with the main upme module